 - Fix label alignment in preferences dialog (bgo #607318) (Pascal de Bruijn)
 - Add unique# and use it to handle our activation (Stephane Delcroix)
 - Stop bundling Mono.Addins (Stephane Delcroix)
 - Avoid leakage in straighten and softfocus editor (Stephane Delcroix)
 - Allow to copy files to clipboard (Stephane Delcroix)
 - Large number of color management related fixes (Stephane Delcroix)
 - A pile of other cleanups and fixes (Ruben Vermeersch)
 - Tons of translation updates (seriously)

f-spot 0.6.1.5 - Nov 4 2009 - What Next ?
-----------------------------------------
- bugfix release for 0.6.x branch
 - make IconView responsive to mouseclicks on gdk 2.18 (bgo #600032)
 - do not ignore .rw2 files (bgo #593474)
 - avoid an Array.OORE on empty dbs (bgo #566977) (Mike Gemuende)

f-spot 0.6.1.4 - Oct 29 2009 - Dedication
-----------------------------------------
- bugfix release for 0.6.x branch
 - keep sorting on startup (bgo #598714) (Lorenzo)
 - fix a NRE on LastRollDialog (bgo #598009) (Jordi Mas)
 - fix the toolbar 2.28-ification (bgo #591421) (Michael Monreal)
 - accept --sync as comandline parameter
 - avoid crashing on AdjustTimeDialog (bgo #591402)
 - allow more than 60 pictures per Facebook albums
 - backported translations

f-spot 0.6.1.3 - Sep 28 2009 - Bare Feet In The Grass
-----------------------------------------------------
- bugfix release for 0.6.x branch
 - call g_type_init () prior to using gconf (bgo #593561)
 - avoid echoing an entry as tip (bgo #595606, bnc #318452)
 - check for existing files on version creation (bgo #596071)
 - set the progress dialog properties atomically (bgo #595228)
 - avoid a crash in the facebook extensions (bgo #595418) (Iain Lane)
 - fix slideshow transitions on gdk csw (>=2.18)
 - prevent a crash on broken exif data (bgo #595503) (Karl Mikaelsson)
 - support for X-GNOME-FullName in .desktop files (bgo #596240)
 - avoid locking on loading tiffs (bgo #592278)