@@ -1,5 +1,0 @@
-/Makefile
-/Makefile.in
-/*.dll
-/*.dll.mdb
-/*.mpack
