@@ -1,15 +1,0 @@
-<Addin namespace="FSpot"
-	id="BeagleService"
-	version="0.7.0.0"
-	name="Beagle Service"
-	description="Notify Beagle on image changes"
-	author="Stephane Delcroix"
-	url="http://f-spot.org/Extensions"
-	category="Services">
-	<Dependencies>
-		<Addin id="Core" version="0.7"/>
-	</Dependencies>
-	<Extension path = "/FSpot/Services">
-		<Service class="BeagleService.BeagleService"/>
-	</Extension>
-</Addin>
