@@ -1,17 +1,0 @@
-addin = BeagleService
-
-addin_manifest = $(addin).addin.xml
-
-addin_sources =			\
-	$(addin).cs		\
-	BeagleNotifier.cs
-
-addin_resources =		\
-	$(addin_manifest)
-
-addin_references =
-addin_packages =
-addin_extraflags =
-addin_extradist =
-
-include $(top_srcdir)/Makefile.addins
