@@ -23,6 +23,7 @@ f-spot 0.6.2 - May X 2010 - Bulldozer Time
  - Avoid leakage in straighten and softfocus editor (Stephane Delcroix)
  - Allow to copy files to clipboard (Stephane Delcroix)
  - Large number of color management related fixes (Stephane Delcroix)
+ - Removed the Beagle plugin at the request of the openSUSE team (Ruben Vermeersch)
  - A pile of other cleanups and fixes (Ruben Vermeersch)
  - Tons of translation updates (seriously)
 
